--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -9,16 +9,18 @@
         </div>
         <div class="field">
           <label for="email">E-mail</label>
-          <input [(ngModel)]="requestLogin.login" id="email" type="email"
+          <input id="email" type="email"
             class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
-  
+           <!--[(ngModel)]="requestLogin.login"-->
         </div>
   
         <div class="field">
           <label for="password">Password</label>
-          <input [(ngModel)]="requestLogin.password" id="password" type="password"
+          <input  id="password" type="password"
+          
             class="text-base text-color surface-overlay p-2 border-1 border-solid surface-border border-round appearance-none outline-none focus:border-primary w-full">
-        </div>
+          <!--[(ngModel)]="requestLogin.password" -->
+          </div>
 
         <div class="field">
           
